--- a/Lesson 1 MVP Moxy/MVPonly/app/src/main/res/layout/activity_main.xml
+++ b/Lesson 1 MVP Moxy/MVPonly/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:inputType="textPersonName"
         android:text="@string/enteredText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,6 +27,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
         android:text="@string/buttonAdd"
+        android:onClick="buttonClick"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/enteredText" />
@@ -35,7 +35,7 @@
     <TextView
         android:id="@+id/textViewAdded"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
