Добавил в Активити методы обработки нажатия кнопок.

--- a/Lesson 2 AsyncTask RxJava/Observer/app/src/main/res/layout/activity_main.xml
+++ b/Lesson 2 AsyncTask RxJava/Observer/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="88dp"
         android:layout_marginEnd="24dp"
         android:text="@string/buttonSubscribe"
+        android:onClick="subscribe"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,6 +28,7 @@
         android:layout_marginTop="72dp"
         android:layout_marginEnd="24dp"
         android:text="@string/buttonUnsubscribe"
+        android:onClick="unsubscribe"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,6 +42,7 @@
         android:layout_marginTop="228dp"
         android:layout_marginEnd="32dp"
         android:text="@string/buttonSpam"
+        android:onClick="spam"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
